unpackaged/main/default/objects/nbavs__AvailabilityLog__c/nbavs__AvailabilityLog__c.object-meta.xml
<CustomObject>
    <label>Availability Log</label>
    <nameField>
        <label>AvailabilityLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Availability Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>