unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__AVS_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AVS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Availability Logs (Natterbox User)</relationshipLabel>
    <relationshipName>Availability_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>