unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Day__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day__c</fullName>
    <description>Day of month when the availability state changed</description>
    <formula>DAY(DATEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Day of month when the availability state changed</inlineHelpText>
    <label>Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>