unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Day_Of_Week_Numeric__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day_Of_Week_Numeric__c</fullName>
    <description>Numeric day of week when the availability state changed. 1 starts on Monday</description>
    <formula>MOD(DATEVALUE(nbavs__Time__c) - DATE(1900, 1, 7), 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric day of week when the availability state changed</inlineHelpText>
    <label>Day Of Week Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>