unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Day_Of_Week_Short__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Day_Of_Week_Short__c</fullName>
    <description>Short day of week when the availability state changed</description>
    <formula>CASE( 
MOD(DATEVALUE( nbavs__Time__c ) - DATE(1900, 1, 7), 7), 
0, &quot;Sun&quot;, 
1, &quot;Mon&quot;, 
2, &quot;Tue&quot;, 
3, &quot;Wed&quot;, 
4, &quot;Thu&quot;, 
5, &quot;Fri&quot;, 
6, &quot;Sat&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Short day of week when the availability state changed</inlineHelpText>
    <label>Day Of Week Short</label>
    <type>Text</type>
</CustomField>