unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__ExternalUserId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ExternalUserId__c</fullName>
    <label>External User Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>