unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Group__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>nbavs__Group__c</referenceTo>
    <relationshipLabel>Availability Logs</relationshipLabel>
    <relationshipName>Availability_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>