unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Hour__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Hour__c</fullName>
    <description>Hour when the availability state changed</description>
    <formula>HOUR( TIMEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hour when the availability state changed</inlineHelpText>
    <label>Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>