unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Month_Name_Short__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Month_Name_Short__c</fullName>
    <description>Short month name when the availability state changed</description>
    <formula>CASE(MONTH( DATEVALUE(nbavs__Time__c )), 
1, &quot;Jan&quot;, 
2, &quot;Feb&quot;, 
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;Jun&quot;, 
7, &quot;Jul&quot;, 
8, &quot;Aug&quot;, 
9, &quot;Sep&quot;, 
10, &quot;Oct&quot;, 
11, &quot;Nov&quot;, 
12, &quot;Dec&quot;, 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Short month name when the availability state changed</inlineHelpText>
    <label>Month Name Short</label>
    <type>Text</type>
</CustomField>