unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Month_Numeric__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Month_Numeric__c</fullName>
    <description>Numeric month when the availability state changed</description>
    <formula>MONTH( DATEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Numeric month when the availability state changed</inlineHelpText>
    <label>Month Numeric</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>