unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Processed__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag controls whether Seconds in State is going to be calculated for a given Availability Log within next batch.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>