unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__SecondsInState__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SecondsInState__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seconds In State</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>