unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__SF_User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Availability_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>