unpackaged/main/default/objects/nbavs__AvailabilityLog__c/fields/nbavs__Year__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Year__c</fullName>
    <description>Year when the availability state changed</description>
    <formula>YEAR(DATEVALUE(nbavs__Time__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Year when the availability state changed</inlineHelpText>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>